--- a/index.html
+++ b/index.html
@@ -9292,8 +9292,102 @@
         <td>2025</td>
         <td>Nexo</td>
         <td>nexo.com</td>
-        <td>Email addresses, Partial phone numbers, Account number</td>
+        <td>Email addresses - Partial phone numbers - Account number</td>
       </tr>
+      <tr><td>1009</td><td>1500</td><td>10730508</td><td>2025</td><td>AUTOSUR Database</td><td>autosur.fr</td><td>Email addresses - Names - Phone numbers - Physical addresses - Vehicle details - Vehicle identification numbers (VINs)</td></tr>
+<tr><td>1010</td><td>1300</td><td>2366576</td><td>2025</td><td>WIRED</td><td>wired.com</td><td>Dates of birth - Display names - Email addresses - Genders - Geographic locations - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1011</td><td>1100</td><td>200000</td><td>2025</td><td>TISZA Világ</td><td>tiszavilag.hu</td><td>Email addresses - Names - Phone numbers - Physical addresses - Usernames</td></tr>
+<tr><td>1012</td><td>700</td><td>6428632</td><td>2011</td><td>China Software Developer Network</td><td>csdn.net</td><td>Email addresses - Passwords - Usernames</td></tr>
+<tr><td>1013</td><td>1300</td><td>2864135</td><td>2025</td><td>Hellowork Scrape</td><td>hellowork-group.com</td><td>Email addresses - Job Experience - Job titles - Names - Qualification - Work Sectors</td></tr>
+<tr><td>1014</td><td>1300</td><td>6319574</td><td>2025</td><td>Bouygues Telecom</td><td>bouyguestelecom.fr</td><td>Bank account numbers - Dates of birth - Email addresses - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1015</td><td>1500</td><td>10251665</td><td>2025</td><td>Raaga</td><td>raaga.com</td><td>Ages - Dates of birth - Email addresses - Genders - Geographic locations - Names - Passwords</td></tr>
+<tr><td>1016</td><td>1500</td><td>12463709</td><td>2025</td><td>Colis Privé Scrape</td><td>colisprive.fr</td><td>Email addresses - Names - Phone numbers - Parcel numbers - Physical addresses</td></tr>
+<tr><td>1017</td><td>1300</td><td>7687552</td><td>2025</td><td>Union Nationale du Sport Scolaire (UNSS)</td><td>unss.org</td><td>Dates of birth - Email addresses - Names - Phone numbers</td></tr>
+<tr><td>1018</td><td>1100</td><td>515100</td><td>2025</td><td>University of the People (UoPeople)</td><td>uopeople.edu</td><td>Country of Birth - Dates of birth - Education programs - Email addresses - Names - Phone numbers</td></tr>
+<tr><td>1019</td><td>1100</td><td>190783</td><td>2025</td><td>Auto-ici</td><td>auto-ici.fr</td><td>Email addresses - Genders - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1020</td><td>1300</td><td>2204011</td><td>2026</td><td>Bumpa</td><td>getbumpa.com</td><td>Email addresses - Names - Phone numbers</td></tr>
+<tr><td>1021</td><td>1300</td><td>1064419</td><td>2025</td><td>Elite Auto</td><td>elite-auto.fr</td><td>Email addresses - Names - Phone numbers - Physical addresses - Vehicle details</td></tr>
+<tr><td>1022</td><td>900</td><td>28785</td><td>2024</td><td>Chris Leong</td><td>chrisleong.com</td><td>Dates of birth - Email addresses - Genders - Names - Nationalities - Phone numbers - Physical addresses - Purchases - Social media profiles</td></tr>
+<tr><td>1023</td><td>1100</td><td>396724</td><td>2025</td><td>GamesCampus</td><td>gamescampus.com</td><td>Email addresses - Passwords - Usernames</td></tr>
+<tr><td>1024</td><td>1100</td><td>249992</td><td>2024</td><td>MSI RMA (Return Merchandise Authorization) orders</td><td>msi.com</td><td>Email addresses - Names - Phone numbers - Physical addresses - Warranty claims</td></tr>
+<tr><td>1025</td><td>1300</td><td>4800588</td><td>2025</td><td>Easy Cash</td><td>easycash.fr</td><td>Dates of birth - Email addresses - Names</td></tr>
+<tr><td>1026</td><td>1400</td><td>129653410</td><td>2018</td><td>Pakistan Mixed Data (2014-2018) Collection</td><td>null</td><td>CNIC(Computerised National Identity Card) - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1027</td><td>1400</td><td>158036651</td><td>2018</td><td>Malaysia Mixed Data (2017-2018) Collection</td><td>null</td><td>Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1028</td><td>1500</td><td>70490161</td><td>2024</td><td>USA Criminals</td><td>nationalpublicdata.com</td><td>Aliases - Arrest and conviction dates - Dates of birth - Genders - Names - Races - Physical addresses - Physical attributes - Sentences</td></tr>
+<tr><td>1029</td><td>1300</td><td>2759866</td><td>2024</td><td>Hertz</td><td>hertz.com</td><td>Credit cards - Dates of birth - Driver&#x27;s licenses - Email addresses - Government issued IDs - Names - Passport numbers - Phone numbers - Physical addresses</td></tr>
+<tr><td>1030</td><td>1500</td><td>19192947</td><td>2024</td><td>Free.fr Scrape</td><td>free.fr</td><td>Bank account numbers - Dates of birth - Genders - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1031</td><td>500</td><td>569733</td><td>2015</td><td>EliteMeeting</td><td>elitemeeting.com</td><td>Email addresses - Passwords</td></tr>
+<tr><td>1032</td><td>1100</td><td>1884502</td><td>2019</td><td>StorEnvy</td><td>storenvy.com</td><td>Dates of birth - Email addresses - Genders - Geographic locations - IP addresses - Names - Passwords - Usernames</td></tr>
+<tr><td>1033</td><td>1300</td><td>7399999</td><td>2023</td><td>Bank Syariah Indonesia (BSI)</td><td> bankbsi.co.id</td><td>Activation codes - Email addresses - Names - Phone numbers</td></tr>
+<tr><td>1034</td><td>1500</td><td>96169425</td><td>2024</td><td>1win</td><td>1win.com</td><td>Dates of birth - Email addresses - IP addresses - Names - Passwords - Phone numbers</td></tr>
+<tr><td>1035</td><td>1300</td><td>5376178</td><td>2024</td><td>Boulanger</td><td>boulanger.com</td><td>Email addresses - Geographic locations - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1036</td><td>1500</td><td>10751765</td><td>2025</td><td>French Federations of Sports breaches Collection</td><td>null</td><td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1037</td><td>900</td><td>50003</td><td>2024</td><td>Tibber</td><td>tibber.com</td><td>Email addresses - Geographic locations - Names</td></tr>
+<tr><td>1038</td><td>900</td><td>89703</td><td>2024</td><td>PoinCampus</td><td>poincampus.com</td><td>Dates of birth - Email addresses - Names - Phone numbers</td></tr>
+<tr><td>1039</td><td>1100</td><td>128058</td><td>2025</td><td>TheSqua.re</td><td>thesqua.re</td><td>Email addresses - Geographic locations - Names - Phone numbers</td></tr>
+<tr><td>1040</td><td>1100</td><td>783531</td><td>2025</td><td>Babyhit</td><td>babyhit.pl</td><td>Email addresses - Names - Phone numbers - Physical addresses - Purchases</td></tr>
+<tr><td>1041</td><td>1300</td><td>1353502</td><td>2025</td><td>UPPCL</td><td>uppcl.org</td><td>Accounts IDs - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1042</td><td>900</td><td>486513</td><td>2020</td><td>JM Bullion</td><td>jmbullion.com</td><td>Email addresses - Passwords</td></tr>
+<tr><td>1043</td><td>900</td><td>31184517</td><td>2014</td><td>Texas Birth|Death|Marriage|Divorce 2014</td><td>null</td><td>Marital Information(Dates|Names|County) - Death Information(Names|Marital Status|Dates|County|Gender) - Birth Information(Gender|Names|Dates|Parents|County)</td></tr>
+<tr><td>1044</td><td>900</td><td>320869</td><td>2019</td><td>Contest</td><td>contest.co.nz</td><td>Email addresses - IP addresses - Passwords - Usernames</td></tr>
+<tr><td>1045</td><td>900</td><td>257625</td><td>2019</td><td>BehMusic</td><td>behmusic.com</td><td>Email addresses - IP addresses - Passwords - Usernames</td></tr>
+<tr><td>1046</td><td>1300</td><td>2325286</td><td>2026</td><td>JobsGo</td><td>jobsgo.vn</td><td>Dates of birth - Education information - Email addresses - Genders - Job titles - Names - Physical addresses</td></tr>
+<tr><td>1047</td><td>700</td><td>1052747</td><td>2012</td><td>VampireFreaks (Partial)</td><td>vampirefreaks.com</td><td>Email addresses - Passwords - Usernames</td></tr>
+<tr><td>1048</td><td>1500</td><td>72727245</td><td>2025</td><td>Under Armour</td><td>underarmour.com</td><td>Dates of birth - Email addresses - First names - Genders - Geographic locations - Preferences - Purchases</td></tr>
+<tr><td>1049</td><td>1100</td><td>9069679</td><td>2019</td><td>LimeLeads Scrape</td><td>limeleads.com</td><td>Company information - Email addresses - Geographic locations - Job titles - Phone numbers - User website URLs</td></tr>
+<tr><td>1050</td><td>1300</td><td>1647083</td><td>2023</td><td>Ministry of Health (Palestine)</td><td>moh.gov.ps</td><td>Dates of birth - Genders - Names - Phone Numbers - Physical addresses - Personal patients data (height - weight - test results - dates of visits - etc.)</td></tr>
+<tr><td>1051</td><td>1100</td><td>139137</td><td>2026</td><td>Wobz Print’s reseller program</td><td>resellers.wobz-print.com</td><td>Email addresses - Names - Passwords - Phone numbers - Physical addresses - Purchases - Tracking numbers - Usernames - VAT numbers</td></tr>
+<tr><td>1052</td><td>1300</td><td>1021883</td><td>2025</td><td>Beckett</td><td>beckett.com</td><td>Email addresses - Names - Phone numbers - Physical addresses - Usernames</td></tr>
+<tr><td>1053</td><td>700</td><td>7169560</td><td>2016</td><td>Meetic</td><td>meetic.fr</td><td>Dates of birth - Email addresses - Genders - Geographic locations - IP addresses - Names - Usernames</td></tr>
+<tr><td>1054</td><td>1300</td><td>1721992</td><td>2024</td><td>Instituto Nacional de Deportes de Chile (ind.cl)</td><td>ind.cl</td><td>Dates of birth - Email addresses - Genders - Names - Passwords - Usernames</td></tr>
+<tr><td>1055</td><td>900</td><td>839446</td><td>2022</td><td>Raffaello Network</td><td>raffaello-network.net</td><td>Email addresses - Names - Passwords - Phone numbers - Physical addresses</td></tr>
+<tr><td>1056</td><td>1100</td><td>1215050</td><td>2021</td><td>BitMart</td><td>bitmart.com</td><td>Email addresses - Geographic locations - IP addresses - Phone numbers</td></tr>
+<tr><td>1057</td><td>1300</td><td>6368677</td><td>2025</td><td>France&#x27;s Pass&#x27;Sport program</td><td>pass.sports.gouv.fr</td><td>Email addresses - Genders - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1058</td><td>700</td><td>9072966</td><td>2011</td><td>178.com</td><td>178.com</td><td>Passwords - Usernames</td></tr>
+<tr><td>1059</td><td>1500</td><td>23129787</td><td>2025</td><td>Vietnam Airlines</td><td>vietnamairlines.com</td><td>Dates of birth - Email addresses - Loyalty program details - Names - Phone numbers</td></tr>
+<tr><td>1060</td><td>1300</td><td>1065042</td><td>2024</td><td>Bazooka</td><td>bazookaegy.com</td><td>Email addresses - Names - Phone numbers</td></tr>
+<tr><td>1061</td><td>1300</td><td>1835864</td><td>2024</td><td>2invoice</td><td>2invoice.ro</td><td>Email addresses - Government issued IDs - Names - Passwords - Phone numbers - Physical addresses</td></tr>
+<tr><td>1062</td><td>900</td><td>115023</td><td>2020</td><td>Displaygifts</td><td>displaygifts.com</td><td>Email addresses - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1063</td><td>1100</td><td>118973</td><td>2026</td><td>CarsDir.com</td><td>carsdir.com</td><td>Email addresses - IP addresses - Names - Passwords - Phone numbers - Physical addresses - Website activity</td></tr>
+<tr><td>1064</td><td>1500</td><td>11684214</td><td>2024</td><td>Zacks (2024 Breach)</td><td>zacks.com</td><td>Email addresses - IP addresses - Names - Passwords - Phone numbers - Physical addresses - Usernames</td></tr>
+<tr><td>1065</td><td>1300</td><td>1172669</td><td>2025</td><td>Family Farm and Home</td><td>familyfarmandhome.com</td><td>Email addresses - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1066</td><td>1100</td><td>722860</td><td>2024</td><td>Central Tickets</td><td>centraltickets.co.uk</td><td>Device information - Email addresses - IP addresses - Names - Passwords - Phone numbers - Purchases</td></tr>
+<tr><td>1067</td><td>1100</td><td>604696</td><td>2024</td><td>MakiPos</td><td>makipos.la</td><td>Dates of Birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1068</td><td>1100</td><td>3895042</td><td>2019</td><td>The National Superintendency of Public Registries (Peru)</td><td>sunarp.gob.pe</td><td>Names - Vehicle details</td></tr>
+<tr><td>1069</td><td>700</td><td>83623</td><td>2019</td><td>Forosecuador.ec</td><td>forosecuador.ec</td><td>Email addresses - IP addresses - Passwords - Usernames</td></tr>
+<tr><td>1070</td><td>900</td><td>13063781</td><td>2000</td><td>Peruvian Taxpayers</td><td>null</td><td>Names - Physical addresses - Tax ID&#x27;s</td></tr>
+<tr><td>1071</td><td>900</td><td>36653022</td><td>2010</td><td>Telcel</td><td>telcel.com</td><td>Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1072</td><td>1100</td><td>6453255</td><td>2020</td><td>Israeli Election Voters 2020</td><td>null</td><td>Government issued IDs - Names - Physical addresses</td></tr>
+<tr><td>1073</td><td>700</td><td>561492</td><td>2018</td><td>Jeux-Fille-Gratuit</td><td>jeux-fille-gratuit.com</td><td>Age - Email addresses - Passwords - Usernames</td></tr>
+<tr><td>1074</td><td>1300</td><td>7864054</td><td>2025</td><td>Quality Used Transmissions</td><td>qualityusedtransmissions.com</td><td>Browser user agent details - Device information - Email addresses - IP addresses - Geographic locations - Names - Phone numbers - Vehicle details - Vehicle identification numbers (VINs)</td></tr>
+<tr><td>1075</td><td>1500</td><td>288570524</td><td>2019</td><td>DATASUS and DETRAN (2019)</td><td>null</td><td>Government issued IDs - Names - Places of birth - Phone numbers - Physical addresses - Vehicle details</td></tr>
+<tr><td>1076</td><td>1300</td><td>17056658</td><td>2021</td><td>Moscow Digital Education School</td><td>school.mos.ru</td><td>Dates of birth - Email addresses - Government issued IDs - Names - Passwords - Phone numbers - Usernames</td></tr>
+<tr><td>1077</td><td>1100</td><td>548278</td><td>2024</td><td>Net54baseball</td><td>net54baseball.com</td><td>Dates of birth - Email addresses - IP addresses - Passwords - Usernames - Website activity</td></tr>
+<tr><td>1078</td><td>1300</td><td>1226237</td><td>2025</td><td>Revora Forums</td><td>forums.revora.net</td><td>Email addresses - IP addresses - Passwords - Usernames</td></tr>
+<tr><td>1079</td><td>1300</td><td>1031021</td><td>2025</td><td>Tribogamer</td><td>forum.tribogamer.com</td><td>Email addresses - IP addresses - Passwords - Usernames</td></tr>
+<tr><td>1080</td><td>1300</td><td>1866008</td><td>2025</td><td>ADDA</td><td>adda.io</td><td>Dates of birth - Email addresses - Names - Passwords - Phone numbers</td></tr>
+<tr><td>1081</td><td>1300</td><td>5706735</td><td>2026</td><td>Salesfloor</td><td>salesfloor.net</td><td>Email addresses - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1082</td><td>1300</td><td>5877796</td><td>2025</td><td>Qantas Airways Limited</td><td>qantas.com</td><td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses - Qantas Frequent Flyer membership numbers</td></tr>
+<tr><td>1083</td><td>1100</td><td>943796</td><td>2023</td><td>Footdistrict</td><td>footdistrict.com</td><td>Email addresses - Names - Phone numbers - Physical addresses - Website activity</td></tr>
+<tr><td>1084</td><td>1100</td><td>812866</td><td>2024</td><td>Tracelo</td><td>tracelo.com</td><td>Email addresses - Names - Passwords - Phone numbers - Physical addresses</td></tr>
+<tr><td>1085</td><td>1100</td><td>127997</td><td>2024</td><td>WithPropel</td><td>withpropel.com</td><td>Company info - Email addresses - Geographic locations - Job titles - Names - Phone numbers</td></tr>
+<tr><td>1086</td><td>1100</td><td>122106</td><td>2024</td><td>Capitools</td><td>capitools.com</td><td>Email addresses - Genders - Names - Purchases</td></tr>
+<tr><td>1087</td><td>1300</td><td>1439210</td><td>2024</td><td>DataGardener</td><td>datagardener.com</td><td>Company info - Email addresses - Geographic locations - Job titles - Names - Phone numbers - Social media profiles</td></tr>
+<tr><td>1088</td><td>900</td><td>93561</td><td>2024</td><td>Rappi</td><td>rappi.com</td><td>Email addresses - Government issued IDs - Names - Phone numbers - Physical addresses - Purchases</td></tr>
+<tr><td>1089</td><td>900</td><td>79255</td><td>2024</td><td>MiPC Mexico</td><td>mipc.com.mx</td><td>Dates of birth - Email addresses - Genders - Government issued IDs - Names - Phone numbers - Physical addresses - Purchases</td></tr>
+<tr><td>1090</td><td>1300</td><td>1248034</td><td>2025</td><td>Beyoung</td><td>beyoung.in</td><td>Email addresses - Names - Phone numbers - Physical addresses - Purchases</td></tr>
+<tr><td>1091</td><td>1100</td><td>191305</td><td>2025</td><td>Loozap</td><td>loozap.com</td><td>Dates of birth - Email addresses - Genders - IP addresses - Names - Passwords - Phone numbers - Profile photos - Usernames - Website activity</td></tr>
+<tr><td>1092</td><td>1500</td><td>19172852</td><td>2024</td><td>JKAmaret</td><td>jkamaret.com</td><td>Age - Browser user agent details - Dates of birth - Email addresses - Genders - IP addresses - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1093</td><td>1300</td><td>1560776</td><td>2025</td><td>Fédération Sportive et Gymnique du Travail (FSGT)</td><td>fsgt.com</td><td>Dates of birth - Genders - Names</td></tr>
+<tr><td>1094</td><td>1300</td><td>1927077</td><td>2024</td><td>Reduction-impots.fr</td><td>reduction-impots.fr</td><td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1095</td><td>1100</td><td>508276</td><td>2025</td><td>Coriolis Scrape</td><td>coriolis.com</td><td>Bank account numbers - Dates of birth - Genders - Names - Phone numbers - Email addresses - Physical addresses</td></tr>
+<tr><td>1096</td><td>1100</td><td>451994</td><td>2025</td><td>CarMax</td><td>carmax.com</td><td>Dates of birth - Email addresses - FAX numbers - Names - Phone numbers - Physical addresses</td></tr>
+<tr><td>1097</td><td>1300</td><td>1026128</td><td>2026</td><td>Crunchbase</td><td>crunchbase.com</td><td>Company info - Email addresses - Geographic locations - Job titles - Names - Phone numbers - Physical addresses - Profile Description - Website activity</td></tr>
+<tr><td>1098</td><td>1300</td><td>1435141</td><td>2026</td><td>Betterment</td><td>betterment.com</td><td>Customer investments and balances - Email addresses - Full names - Genders - HubSpot CRM dumps - KYC information - Phone numbers - Physical addresses - Partial payment information - Usernames - Zendesk support tickets</td></tr>
+<tr><td>1099</td><td>1500</td><td>29982459</td><td>2025</td><td>SoundCloud</td><td>soundcloud.com</td><td>Avatars - Email addresses - Geographic locations - Names - Profile descriptions - Usernames</td></tr>
+<tr><td>1100</td><td>1100</td><td>146014</td><td>2026</td><td>Edmunds</td><td>edmunds.com</td><td>Browser user agent details - Email addresses - IP addresses - Passwords - Usernames - Vehicle details</td></tr>
+<tr><td>1101</td><td>1300</td><td>2037529</td><td>2023</td><td>Noomeera</td><td>noomeera.com</td><td>Avatars - Dates of birth - Device information - Email addresses - Genders - Geographic locations - Names - Phone numbers - Usernames - Vehicle details - Vehicle identification numbers (VINs)</td></tr>
+<tr><td>1102</td><td>1300</td><td>2131438</td><td>2024</td><td>VietLoan</td><td>vietloan.vn</td><td>Dates of Birth - Email addresses - Genders - Names - Phone numbers - Website activity</td></tr>
     </tbody>
   </table>
   <div id="contact-info">
@@ -9311,5 +9405,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
