--- a/index.html
+++ b/index.html
@@ -10386,6 +10386,24 @@
                 <td>vietloan.vn</td>
                 <td>Dates of Birth - Email addresses - Genders - Names - Phone numbers - Website activity</td>
             </tr>
+            <tr>
+                <td>1103</td>
+                <td>1800</td>
+                <td>12091915</td>
+                <td>2026</td>
+                <td>Panera Bread</td>
+                <td>panerabread.com</td>
+                <td>Dates of birth - Email addresses - Genders - Job titles - Names - Phone numbers - Physical addresses</td>
+            </tr>
+            <tr>
+                <td>1104</td>
+                <td>1500</td>
+                <td>9218321</td>
+                <td>2025</td>
+                <td>Unspecified French leak aka "ANTS"</td>
+                <td>null</td>
+                <td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td>
+            </tr>
         </tbody>
     </table>
     <div id="contact-info">
@@ -10404,3 +10422,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
