--- a/index.html
+++ b/index.html
@@ -10404,6 +10404,87 @@
                 <td>null</td>
                 <td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td>
             </tr>
+            <tr>
+                <td>1105</td>
+                <td>1300</td>
+                <td>195879</td>
+                <td>2026</td>
+                <td>Match Group</td>
+                <td>mtch.com</td>
+                <td>Browser user agent details - Dates of birth - Device information - Email addresses - Genders - IP addresses - Names - Phone numbers - Passwords - Usernames</td>
+            </tr>
+            <tr>
+                <td>1106</td>
+                <td>1300</td>
+                <td>2152650</td>
+                <td>2024</td>
+                <td>Cultura.com (Partial)</td>
+                <td>cultura.com</td>
+                <td>Email addresses - Names - Phone numbers - Physical addresses - Purchases</td>
+            </tr>
+            <tr>
+                <td>1107</td>
+                <td>1300</td>
+                <td>3673</td>
+                <td>2026</td>
+                <td>Resist.Mobi</td>
+                <td>resist.mobi</td>
+                <td>Email addresses - Geographic locations - I.C.E reports - Social media profiles - Usernames</td>
+            </tr>
+            <tr>
+                <td>1108</td>
+                <td>1300</td>
+                <td>73503</td>
+                <td>2026</td>
+                <td>Reseau.Site</td>
+                <td>reseau.site</td>
+                <td>Dates of birth - Email addresses - Genders - Names - Passwords - Phone numbers - Physical addresses - Purchases</td>
+            </tr>
+            <tr>
+                <td>1109</td>
+                <td>1300</td>
+                <td>19109298</td>
+                <td>2025</td>
+                <td>Mon Logiciel Médical Scrape</td>
+                <td>cegedim.fr</td>
+                <td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td>
+            </tr>
+            <tr>
+                <td>1110</td>
+                <td>1300</td>
+                <td>966999</td>
+                <td>2024</td>
+                <td>Le Point</td>
+                <td>lepoint.fr</td>
+                <td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td>
+            </tr>
+            <tr>
+                <td>1111</td>
+                <td>1300</td>
+                <td>537877</td>
+                <td>2026</td>
+                <td>Anka</td>
+                <td>anka.africa</td>
+                <td>Account balances - Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses - Purchases</td>
+            </tr>
+            <tr>
+                <td>1112</td>
+                <td>1300</td>
+                <td>301507</td>
+                <td>2025</td>
+                <td>Home Design 3D</td>
+                <td>homedesign3d.net</td>
+                <td>Email addresses - Names - Usernames</td>
+            </tr>
+            <tr>
+                <td>1113</td>
+                <td>1300</td>
+                <td>70981</td>
+                <td>2025</td>
+                <td>Trescal</td>
+                <td>trescal.com</td>
+                <td>Email addresses - Job titles - Names - Phone numbers - Physical addresses - Siret numbers</td>
+            </tr>
         </tbody>
     </table>
     <div id="contact-info">
@@ -10422,5 +10503,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
