--- a/index.html
+++ b/index.html
@@ -10485,6 +10485,15 @@
                 <td>trescal.com</td>
                 <td>Email addresses - Job titles - Names - Phone numbers - Physical addresses - Siret numbers</td>
             </tr>
+            <tr>
+                <td>1114</td>
+                <td>1300</td>
+                <td>2806537</td>
+                <td>2025</td>
+                <td>Turknet</td>
+                <td>turk.net</td>
+                <td>Dates of birth - Email addresses (custom ones) - IP addresses - Names - National Identification Numbers - Passwords - Phone numbers - Physical addresses - Usernames</td>
+            </tr>
         </tbody>
     </table>
     <div id="contact-info">
@@ -10503,4 +10512,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
