--- a/index.html
+++ b/index.html
@@ -10494,6 +10494,223 @@
                 <td>turk.net</td>
                 <td>Dates of birth - Email addresses (custom ones) - IP addresses - Names - National Identification Numbers - Passwords - Phone numbers - Physical addresses - Usernames</td>
             </tr>
+            <tr>
+    <td>1115</td>
+    <td>900</td>
+    <td>213190</td>
+    <td>2019</td>
+    <td>Acikogretim</td>
+    <td>acikogretim.gen.tr</td>
+    <td>Email addresses - IP addresses - Passwords - Usernames</td>
+</tr>
+<tr>
+    <td>1116</td>
+    <td>700</td>
+    <td>88832</td>
+    <td>2019</td>
+    <td>Grails Forum</td>
+    <td>grailsforum.co.uk</td>
+    <td>Email addresses - IP addresses - Passwords - Usernames</td>
+</tr>
+<tr>
+    <td>1117</td>
+    <td>700</td>
+    <td>87877</td>
+    <td>2019</td>
+    <td>PoradnikZdrowie</td>
+    <td>forum.poradnikzdrowie.pl</td>
+    <td>Email addresses - IP addresses - Passwords - Usernames</td>
+</tr>
+<tr>
+    <td>1118</td>
+    <td>700</td>
+    <td>73053</td>
+    <td>2019</td>
+    <td>FilmHot</td>
+    <td>filmhot.us</td>
+    <td>Email addresses - IP addresses - Passwords - Usernames</td>
+</tr>
+<tr>
+    <td>1119</td>
+    <td>700</td>
+    <td>110534</td>
+    <td>2019</td>
+    <td>SportsFreaksOnline</td>
+    <td>sportsfreaksonline.com</td>
+    <td>Email addresses - IP addresses - Passwords - Usernames</td>
+</tr>
+<tr>
+    <td>1120</td>
+    <td>1900</td>
+    <td>198345</td>
+    <td>2023</td>
+    <td>Kroll (FTX Bankruptcy Claimants)</td>
+    <td>kroll.com</td>
+    <td>Account balances - Applicant country - Email addresses - Internal notes - Names - Phone numbers</td>
+</tr>
+<tr>
+    <td>1121</td>
+    <td>1500</td>
+    <td>660761</td>
+    <td>2026</td>
+    <td>Inter Rapidísimo</td>
+    <td>interrapidisimo.com</td>
+    <td>Email addresses - Geographic locations - Names - Passwords - Phone numbers - Usernames</td>
+</tr>
+<tr>
+    <td>1122</td>
+    <td>900</td>
+    <td>347018</td>
+    <td>2019</td>
+    <td>DownPit</td>
+    <td>downpit.com</td>
+    <td>Email addresses - Passwords</td>
+</tr>
+<tr>
+    <td>1123</td>
+    <td>700</td>
+    <td>4169</td>
+    <td>2026</td>
+    <td>WormGPT AI</td>
+    <td>wormgpt.ai</td>
+    <td>Balances - Email addresses - Payment Data - Subscriptions - UIDs</td>
+</tr>
+<tr>
+    <td>1124</td>
+    <td>900</td>
+    <td>339361</td>
+    <td>2019</td>
+    <td>Thanh Hóa FC Forum</td>
+    <td>forum.thanhhoafc.vn</td>
+    <td>Email addresses - IP addresses - Passwords - Usernames</td>
+</tr>
+<tr>
+    <td>1125</td>
+    <td>900</td>
+    <td>456183</td>
+    <td>2019</td>
+    <td>StripCreator</td>
+    <td>stripcreator.com</td>
+    <td>Email addresses - Passwords</td>
+</tr>
+<tr>
+    <td>1126</td>
+    <td>1300</td>
+    <td>182326</td>
+    <td>2025</td>
+    <td>TraxNYC</td>
+    <td>traxnyc.com</td>
+    <td>Email addresses - Names - Phone numbers - Physical addresses - Purchases</td>
+</tr>
+<tr>
+    <td>1127</td>
+    <td>1300</td>
+    <td>672497</td>
+    <td>2025</td>
+    <td>Albertsons</td>
+    <td>albertsons.com</td>
+    <td>Dates of birth - Email addresses - Genders - Names - Phone numbers - Physical addresses</td>
+</tr>
+<tr>
+    <td>1128</td>
+    <td>1300</td>
+    <td>537452</td>
+    <td>2025</td>
+    <td>Engie Resources (Plymouth)</td>
+    <td>engieresources.com</td>
+    <td>Dates of birth - Email addresses - Names - Phone numbers - Physical addresses - Social media profiles</td>
+</tr>
+<tr>
+    <td>1129</td>
+    <td>1100</td>
+    <td>419019</td>
+    <td>2024</td>
+    <td>Cyberphoenix Forum</td>
+    <td>cyberphoenix.rog</td>
+    <td>Email addresses - IP addresses - Passwords - Usernames</td>
+</tr>
+<tr>
+    <td>1130</td>
+    <td>1100</td>
+    <td>348345</td>
+    <td>2024</td>
+    <td>Maxance</td>
+    <td>maxance.com</td>
+    <td>Email addresses - Genders - Government issued IDs (IBANs) - Logins - Names - Physical addresses - Phone numbers
+        - Vehicle details</td>
+</tr>
+<tr>
+    <td>1131</td>
+    <td>1300</td>
+    <td>3160015</td>
+    <td>2025</td>
+    <td>Air Miles España (Travel Club)</td>
+    <td>travelclub.es</td>
+    <td>Dates of birth - Demographic information - Email addresses - Genders - Names</td>
+</tr>
+<tr>
+    <td>1132</td>
+    <td>400</td>
+    <td>43420</td>
+    <td>2023</td>
+    <td>Store pas cher</td>
+    <td>storepascher.com</td>
+    <td>Dates of birth - Email addresses - Names - IP addresses - Passwords - Website activity</td>
+</tr>
+<tr>
+    <td>1133</td>
+    <td>1100</td>
+    <td>689756</td>
+    <td>2025</td>
+    <td>Substack</td>
+    <td>substack.com</td>
+    <td>Bios - Email addresses - Phone numbers - Usernames</td>
+</tr>
+<tr>
+    <td>1134</td>
+    <td>900</td>
+    <td>67294</td>
+    <td>2025</td>
+    <td>Zéphir</td>
+    <td>groupe-zephir.fr</td>
+    <td>Email addresses - Genders - Government issued IDs (IBANs) - Names - Phone numbers - Physical addresses</td>
+</tr>
+<tr>
+    <td>1135</td>
+    <td>1100</td>
+    <td>137409</td>
+    <td>2025</td>
+    <td>Pentadiet</td>
+    <td>pentadiet.it</td>
+    <td>Dates of birth - Email addresses - Geographic locations - Names - Phone numbers</td>
+</tr>
+<tr>
+    <td>1136</td>
+    <td>1100</td>
+    <td>611698</td>
+    <td>2025</td>
+    <td>Portail Emploi Scrape</td>
+    <td>portailemploi.com</td>
+    <td>Email addresses - FAX numbers - Genders - Names - Phone numbers</td>
+</tr>
+<tr>
+    <td>1137</td>
+    <td>1100</td>
+    <td>1129888109</td>
+    <td>2022</td>
+    <td>China Mobile (中国移动 2022)</td>
+    <td>chinamobileltd.com</td>
+    <td>IMEI - Phone numbers</td>
+</tr>
+<tr>
+    <td>1138</td>
+    <td>2900</td>
+    <td>997379508</td>
+    <td>2024</td>
+    <td>National Public Data (SSNs Breach)</td>
+    <td>nationalpublicdata.com</td>
+    <td>Dates of birth - Email addresses - Government issued IDs - Names - Phone numbers - Physical addresses.</td>
+</tr>
         </tbody>
     </table>
     <div id="contact-info">
@@ -10512,5 +10729,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
